Fix scrollbar bug for IE7 (RM-2635)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@16897 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/ClassicBlue/HTML/SingleView.css
+++ b/Remotion/Web/Core/Res/Themes/ClassicBlue/HTML/SingleView.css
@@ -91,6 +91,17 @@ div.singleViewView
   overflow: hidden;
 }
 
+body.msie7 div.singleViewView div.content
+{
+  margin-left: -2px;
+}
+
+body.msie7 div.singleViewView div.content > div
+{
+  padding-left: 2px;
+}
+
+
 div.singleViewView div.contentBorder
 {
   position: relative;
